<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MoneyTracker</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="sendEmail">Send E-Mail</string>
    <string name="log_out">Logout</string>
    <string name="log_expense">Log Expense/Income</string>
    <string name="Open">MoneyTracker</string>
    <string name="Close">MoneyTracker</string>

    <string-array name="currencyList">
        <item>Euro</item>
        <item>Rupee</item>
        <item>Dollar</item>
    </string-array>

    <string-array name="repetitiveDuration">
        <item>None</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="categoryList">
        <item>None</item>
    </string-array>

    <string-array name="paymentMethodList">
        <item>Card</item>
        <item>Cash</item>
        <item>NetBanking</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pin_enable">Enable PIN</string>
    <string name="change_pin">Change PIN</string>
    <string name="security">Security</string>
    <string name="general">General</string>
    <string name="about_test">About test</string>
    <string name="about_test2">About Test 2</string>
    <string name="data">Data</string>
    <string name="new_category">New Category</string>
    <string name="title_category">Category</string>
    <string name="add_new_category">Add a new category</string>
    <string name="save_category_button">SAVE</string>
    <string name="note">note</string>
    <string name="ivRowDelete" />
    <string name="ivRowEdit" />
    <string name="enter_amount">Enter the amount</string>
    <string name="enter_date">Select the date</string>
    <string name="enter_category">Category</string>
    <string name="cancel_button">CANCEL</string>
    <string name="save_button">SAVE</string>
    <string name="enter_payment_method">Payment Method</string>
    <string name="enter_repetitive">Repetitive</string>
    <string name="amount">Amount:</string>
    <string name="date">Date:</string>
    <string name="category">Category:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="duration">Duration:</string>
    <string-array name="about_team">About Spicy Pi</string-array>
    <string-array name="about_app">About MoneyTracker</string-array>
    <string name="title_activity_report">Report</string>
    <string name="tab_bar_graph">BAR GRAPH</string>
    <string name="tab_pie_graph">PIE GRAPH</string>
    <string name="tab_list">LIST</string>
    <string name="appbar_scrolling_view_behavior" />
    <string name="amount_limit_text">amount limit</string>
    <string name="payment_method_text">Payment Method</string>
    <string name="time_based_text">Time Based</string>
    <string name="category_text">Category:</string>
    <string name="start_date_txt">Start Date:</string>
    <string name="end_date_text">End Date:</string>
    <string name="enter_start_date" />
    <string name="enter_end_date" />
    <string name="search_button">SEARCH</string>
    <string name="select_end">Select the end date</string>
    <string name="select_start">Select the start date</string>
    <string name="enter_min">Enter min amount</string>
    <string name="duration_text">Select duration:</string>
    <string name="enter_max">Enter max amount</string>
    <string name="category_textt">Select category:</string>
    <string name="currency_text">Select currency:</string>
    <string name="payment_method_textt">Select payment method:</string>
    <string name="login_button">LOGIN</string>
    <string name="AddCat" />
    <string name="choose_symbol">Choose a symbol:</string>
    <string name="symbols" />
    <string name="targetClass">com.example.moneytracker.AddCategory</string>
    <string name="targetPackage">com.example.moneytracker</string>
    <string name="enter_income">Income</string>
    <string name="enter_currency">Choose Currency</string>
    <string name="save_button_currency">SAVE</string>
    <string name="currency_change">currency_change</string>
    <string name="targetClassCurrency">com.example.moneytracker.ChangeCurrency</string>
    <string name="targetPackageCurrency">com.example.moneytracker</string>
    <string name="ChangeCurr">ChangeCurr</string>
    <string name="currency_change_settings">Change Currency</string>
    <string name="add_new_category_text">Enter a new category</string>
    <string name="date_text">date</string>
    <string name="type_text">type</string>
    <string name="category_list_text">category</string>
    <string name="payment_method_list_text">paymentMethod</string>
    <string name="duration_list_text">duration</string>
    <string name="note_text">note</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="confirm_new_pin" />
    <string name="confirm_to_modify_pin_txt">Confirm PIN</string>
    <string name="modify_btn">OK</string>
    <string name="EnablePin">EnablePin</string>
    <string name="General">pref_header_general</string>
    <string name="PIN">pref_header_pin_settings</string>
    <string name="Data">pref_header_categories</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save_new_pin">SAVE</string>
    <string name="message_incorrect_pin">Please enter the password correctly</string>
    <string name="about_moneyTracker">About MoneyTracker</string>
    <string name="about_spicyPi">About SpicyPi</string>
    <string name="total">Total</string>
    <string name="amount_text">amount_text</string>
</resources>
