<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="360dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/amount_text_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/type_text_list"
                android:text="@string/note"
                android:textColor="#616161"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/type_text_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_text" />

            <TextView
                android:id="@+id/date_text_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/category_text_list"
                android:layout_alignParentBottom="true"
                android:text="@string/date_text" />

            <TextView
                android:id="@+id/category_text_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/type_text_list"
                android:text="@string/category_list_text" />

            <TextView
                android:id="@+id/payment_method_text_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/amount_text_list"
                android:layout_toEndOf="@id/amount_text_list"
                android:text="@string/payment_method_list_text" />

            <TextView
                android:id="@+id/duration_text_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/payment_method_text_list"
                android:layout_toEndOf="@id/date_text_list"
                android:text="@string/duration_list_text" />

            <TextView
                android:id="@+id/note_text_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_text_list"
                android:text="@string/note_text" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivRowDelete_list"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="7dp"
                android:contentDescription="@string/ivRowDelete"
                android:onClick="setListeners"
                android:src="@android:drawable/ic_menu_delete"
                android:tint="#9E9E9E" />

            <ImageView
                android:id="@+id/ivRowEdit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="7dp"
                android:contentDescription="@string/ivRowEdit"
                android:src="@android:drawable/ic_menu_edit"
                android:tint="#9E9E9E" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>

