<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="65dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="52dp"
            android:layout_marginRight="0dp"
            android:padding="2dp" />

        <TextView
            android:id="@+id/amount_text_list"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_toEndOf="@id/type_text_list"
            android:text="@string/amount_text"
            android:textColor="#616161"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/type_text_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="false"
            android:layout_marginStart="4dp"
            android:text="@string/type_text"
            android:textColor="#616161"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_text_list"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_text_list"
            android:layout_alignStart="@+id/category_text_list"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="-3dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:text="@string/date_text" />

        <TextView
            android:id="@+id/category_text_list"
            android:layout_width="118dp"
            android:layout_height="18dp"
            android:layout_below="@id/type_text_list"
            android:layout_alignParentStart="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="13dp"
            android:layout_toStartOf="@+id/payment_method_text_list"
            android:text="@string/category_list_text" />

        <TextView
            android:id="@+id/payment_method_text_list"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/amount_text_list"
            android:layout_marginStart="-30dp"
            android:layout_marginTop="-3dp"
            android:layout_marginEnd="27dp"
            android:layout_toStartOf="@+id/imageView"
            android:layout_toEndOf="@id/amount_text_list"
            android:text="@string/payment_method_list_text" />

        <TextView
            android:id="@+id/duration_text_list"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/payment_method_text_list"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="17dp"
            android:layout_toStartOf="@+id/imageView"
            android:layout_toEndOf="@id/date_text_list"
            android:text="@string/duration_list_text" />

        <TextView
            android:id="@+id/note_text_list"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_text_list"
            android:layout_alignEnd="@+id/duration_text_list"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:text="@string/note_text" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="33dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivRowDelete_list"
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:contentDescription="@string/ivRowDelete"
            android:onClick="setListeners"
            android:src="@android:drawable/ic_menu_delete"
            android:tint="#9E9E9E" />

        <ImageView
            android:id="@+id/ivRowEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:contentDescription="@string/ivRowEdit"
            android:src="@android:drawable/ic_menu_edit"
            android:tint="#9E9E9E"
            android:visibility="gone" />

    </LinearLayout>

</android.support.v7.widget.CardView>
