<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCategory">

    <Spinner
        android:id="@+id/category3_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:autofillHints="@string/enter_category"
        android:contextClickable="false"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/add_new_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category1" />

    <TextView
        android:id="@+id/category1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:text="@string/title_category"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/category3_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_new_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/add_new_category_text"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/choose_symbol_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category3_add" />

    <Button
        android:id="@+id/save_button_category"
        android:layout_width="124dp"
        android:layout_height="55dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="40dp"
        android:text="@string/save_category_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_symbol_text" />

    <TextView
        android:id="@+id/choose_symbol_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:text="@string/choose_symbol"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/save_button_category"
        app:layout_constraintEnd_toStartOf="@+id/symbols"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_new_category" />

    <Spinner
        android:id="@+id/symbols"
        android:layout_width="102dp"
        android:layout_height="93dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="66dp"
        android:layout_marginBottom="104dp"
        android:contentDescription="@string/symbols"
        app:layout_constraintBottom_toTopOf="@+id/save_button_category"
        app:layout_constraintStart_toEndOf="@+id/choose_symbol_text"
        app:layout_constraintTop_toBottomOf="@+id/add_new_category" />

</android.support.constraint.ConstraintLayout>