<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawerLayout"
    tools:context=".NewExpense">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Navigation">


        <TextView
            android:id="@+id/textView7_new_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="payment_method_add"
            android:text="@string/payment_method"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/duration_text_new_add"
            app:layout_constraintEnd_toStartOf="@+id/paymentMethod_new_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6_new_add" />

        <TextView
            android:id="@+id/textView6_new_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="22dp"
            android:contentDescription="@string/category_text"
            android:text="@string/category_text"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/textView7_new_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4_new_add" />

        <TextView
            android:id="@+id/textView5_new_add"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="103dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/amount"
            android:text="@string/amount"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/textView4_new_add"
            app:layout_constraintEnd_toStartOf="@+id/amount_new_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4_new_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/date"
            android:text="@string/date"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/textView6_new_add"
            app:layout_constraintEnd_toStartOf="@+id/date_new_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5_new_add" />

        <EditText
            android:id="@+id/amount_new_add"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="103dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="26dp"
            android:contentDescription="@string/enter_amount"
            android:ems="10"
            android:inputType="number|textPersonName"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/date_new_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5_new_add"
            app:layout_constraintTop_toBottomOf="@+id/repetitiveSpinner_new_add"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/enter_amount" />

        <TextView
            android:id="@+id/date_new_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="28dp"
            android:contentDescription="@string/enter_date"
            android:ems="10"
            android:text="@string/enter_date"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/category1_new_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4_new_add"
            app:layout_constraintTop_toBottomOf="@+id/amount_new_add" />

        <EditText
            android:id="@+id/note_new_add"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/note"
            android:ems="10"
            android:inputType="text"
            android:text="@string/note"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.796" />

        <Spinner
            android:id="@+id/category1_new_add"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="146dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="25dp"
            android:autofillHints="@string/enter_category"
            android:contextClickable="false"
            android:spinnerMode="dropdown"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/paymentMethod_new_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView6_new_add"
            app:layout_constraintTop_toBottomOf="@+id/date_new_add" />

        <Button
            android:id="@+id/cancel_button_new_add"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/cancel_button"
            android:text="@string/cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button_category_new_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note_new_add"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/save_button_category_new_add"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/save_button"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button_new_add"
            app:layout_constraintTop_toBottomOf="@+id/note_new_add"
            app:layout_constraintVertical_bias="1.0" />

        <Switch
            android:id="@+id/repetitive_new_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="49dp"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/enter_repetitive"
            app:layout_constraintBottom_toTopOf="@+id/amount_new_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/income_new_add"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/paymentMethod_new_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/enter_payment_method"
            android:dropDownWidth="wrap_content"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toTopOf="@+id/repetitiveSpinner_new_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView7_new_add"
            app:layout_constraintTop_toBottomOf="@+id/category1_new_add" />

        <Spinner
            android:id="@+id/repetitiveSpinner_new_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="62dp"
            android:contentDescription="@string/enter_repetitive"
            android:dependency="@string/enter_repetitive"
            android:spinnerMode="dropdown"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/note_new_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/duration_text_new_add"
            app:layout_constraintTop_toBottomOf="@+id/paymentMethod_new_add"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/duration_text_new_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="65dp"
            android:contentDescription="@string/duration"
            android:dependency="@string/enter_repetitive"
            android:text="@string/duration"
            android:textSize="17sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/note_new_add"
            app:layout_constraintEnd_toStartOf="@+id/repetitiveSpinner_new_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7_new_add" />

        <Switch
            android:id="@+id/income_new_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="52dp"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/enter_income"
            app:layout_constraintBottom_toTopOf="@+id/textView5_new_add"
            app:layout_constraintEnd_toStartOf="@+id/repetitive_new_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:headerLayout="@layout/navigation_header"
    app:menu="@menu/navigation_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>